--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -14,6 +14,7 @@
         <div class="list-group menu">
           <a class="list-group-item" href="{{pathFor 'home'}}">Intro</a>
           <a class="list-group-item" href="{{pathFor 'ironRouter'}}">Routing with Iron Router</a>
+          <a class="list-group-item" href="{{pathFor 'packages'}}">Packages</a>
           <a class="list-group-item" href="{{pathFor 'publishSubscribe'}}">Publish & Subscribe</a>
           <a class="list-group-item" href="{{pathFor 'reactivity'}}">Reactivity - realtime changes</a>
         </div>
@@ -22,7 +23,7 @@
         <h1>Welcome to Glorify Meteor!</h1>
         <p>
           <span class="glyphicon glyphicon-book"></span>
-          You will learn something (special) about Meteor here.
+          You will learn something (special) about Meteor and his glory here.
         </p>
         {{> yield}}
       </div>
