--- a/client/publishSubscribe/publishSubscribe.html
+++ b/client/publishSubscribe/publishSubscribe.html
@@ -1,3 +1,6 @@
 <template name="publishSubscribe">
   <h2>Publish & Subscribe</h2>
+  <p>
+    In Meteor you need to subscribe data you want to show on the client and publish them on the server.
+  </p>
 </template>
