--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -1,7 +1,14 @@
 <head>
   <title>Glorify Meteor!</title>
-</head>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-15567197-18', 'auto');
+  </script>
+</head>
 <body>
 
 </body>
@@ -13,8 +20,11 @@
         <br/>
         <div class="list-group menu">
           <a class="list-group-item" href="{{pathFor 'home'}}">Intro</a>
+          <a class="list-group-item" href="{{pathFor 'applicationStructure'}}">Application structure</a>
           <a class="list-group-item" href="{{pathFor 'ironRouter'}}">Routing with Iron Router</a>
           <a class="list-group-item" href="{{pathFor 'packages'}}">Packages</a>
+          <a class="list-group-item" href="{{pathFor 'collections'}}">Database Collections</a>
+          <a class="list-group-item" href="{{pathFor 'autopublishAndInsecure'}}">Autopublish and Insecure packages</a>
           <a class="list-group-item" href="{{pathFor 'publishSubscribe'}}">Publish & Subscribe</a>
           <a class="list-group-item" href="{{pathFor 'reactivity'}}">Reactivity - realtime changes</a>
         </div>
@@ -23,7 +33,8 @@
         <h1>Welcome to Glorify Meteor!</h1>
         <p>
           <span class="glyphicon glyphicon-book"></span>
-          You will learn something (special) about Meteor and his glory here.
+          You will learn something (special) about
+          <a href="http://meteor.com">Meteor</a> (v0.9.3) and his glory here.
         </p>
         {{> yield}}
       </div>
