Publish & Subscribe chapter, added disqus

--- a/client/applicationStructure/applicationStructure.html
+++ b/client/applicationStructure/applicationStructure.html
@@ -7,4 +7,7 @@
     Refactoring Meteor application is easy as pie. In most cases you can move your files and folders
     without worying you something break.
   </p>
+
+  <br/><br/>
+  {{> disqus}}
 </template>
