--- a/client/collections/collections.html
+++ b/client/collections/collections.html
@@ -40,4 +40,7 @@ Books = new Mongo.Collection('books');
     <a href="https://atmospherejs.com/aldeed/collection2">Collection2 package</a>.
   </p>
 
+  <br/><br/>
+  {{> disqus}}
+
 </template>
