--- a/client/home/home.html
+++ b/client/home/home.html
@@ -50,4 +50,7 @@ Template.home.events({
     the template is automatically updated. Awesome. If you reload
     your browser, the session is set to it's default value 0 (<i>Session.setDefault("counter", 0);</i>).
   </p>
+
+  <br/><br/>
+  {{> disqus}}
 </template>
