--- a/client/ironRouter/ironRouter.html
+++ b/client/ironRouter/ironRouter.html
@@ -5,4 +5,7 @@
     So you need a router. In Meteor you will probably want to use
     <a href="https://github.com/EventedMind/iron-router/tree/master">Iron Router</a>.
   </p>
+
+  <br/><br/>
+  {{> disqus}}
 </template>
