--- a/client/packages/packages.html
+++ b/client/packages/packages.html
@@ -18,4 +18,7 @@
     </a>.
     The main reason is that packages can contain server and client code (even templates).
   </p>
+
+  <br/><br/>
+  {{> disqus}}
 </template>
