--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -23,6 +23,7 @@
           <a class="list-group-item" href="{{pathFor 'applicationStructure'}}">Application structure</a>
           <a class="list-group-item" href="{{pathFor 'ironRouter'}}">Routing with Iron Router</a>
           <a class="list-group-item" href="{{pathFor 'packages'}}">Packages</a>
+          <a class="list-group-item" href="{{pathFor 'accountsPackage'}}">Accounts package - register/login</a>
           <a class="list-group-item" href="{{pathFor 'collections'}}">Database Collections</a>
           <a class="list-group-item" href="{{pathFor 'autopublishAndInsecure'}}">Autopublish and Insecure packages</a>
           <a class="list-group-item" href="{{pathFor 'publishSubscribe'}}">Publish & Subscribe</a>
