Added Reactivity chapter

--- a/client/publishSubscribe/publishSubscribe.html
+++ b/client/publishSubscribe/publishSubscribe.html
@@ -35,7 +35,7 @@ Meteor.publish('books', function() {
 Books.insert({ title: 'Discover Meteor', author: 'Tom Coleman & Sacha Greif'});
 </pre>
 
-  <a href="https://www.discovermeteor.com/blog/understanding-meteor-publications-and-subscriptions/">
+  <a href="https://www.discovermeteor.com/blog/understanding-meteor-publications-and-subscriptions/" target="_blank">
     Learn more about publications and subscriptions
   </a>
 
