Added Super easy deploy chapter, spiderable package Repaired disquss SPA loading

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -13,7 +13,7 @@
 
   <hr/>
   <h3>Client code:</h3>
-  <p>Client code is in <i>client</i> folder or wrapped with <i>if (Meteor.isClient) {}</i></p>
+  <p>Client code is in <i>client</i> folder of your project or wrapped with <i>if (Meteor.isClient) {}</i></p>
 <pre>
 // counter starts at 0
 Session.setDefault("counter", 0);
