--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -28,6 +28,7 @@
           <a class="list-group-item" href="{{pathFor 'autopublishAndInsecure'}}">Autopublish and Insecure packages</a>
           <a class="list-group-item" href="{{pathFor 'publishSubscribe'}}">Publish & Subscribe</a>
           <a class="list-group-item" href="{{pathFor 'reactivity'}}">Reactivity - realtime changes</a>
+          <a class="list-group-item" href="{{pathFor 'superEasyDeploy'}}">Super easy deploy</a>
         </div>
       </div>
       <div class="col-sm-8">
