Repaired typos, added meta viewport

--- a/client/packages/packages.html
+++ b/client/packages/packages.html
@@ -8,8 +8,8 @@
 
   <h3>Third party packages</h3>
   <p>
-    There is plenty of packages on <a href="http://atmospherejs.com/">Atmosphere</a> created by
-    Meteor's community. Probably anything you find on Bower or NPM you will find on Atmosphere. If not
+    There are plenty of packages on <a href="http://atmospherejs.com/">Atmosphere</a> created by
+    Meteor's community. Probably anything you find on Bower or NPM you will find on Atmosphere. If not,
     just <a href="https://atmospherejs.com/docs/publishing">create Meteor package</a>. It's easy.
   </p>
   <p>Reasons why Meteor has it's own packages is
