--- a/client/home/home.html
+++ b/client/home/home.html
@@ -46,7 +46,7 @@ Template.home.events({
   <pre>Session.set("counter", Session.get("counter") + 1);</pre>
   <p>And see the counter: {{counter}}</p>
   <p>
-    If you change session variable which value is rendered in template
+    If you change session variable which value is rendered in template,
     the template is automatically updated. Awesome. If you reload
     your browser, the session is set to it's default value 0 (<i>Session.setDefault("counter", 0);</i>).
   </p>
