--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -21,6 +21,7 @@
         <br/>
         <div class="list-group menu">
           <a class="list-group-item" href="{{pathFor 'home'}}">Intro</a>
+          <a class="list-group-item" href="{{pathFor 'templates'}}">Templates</a>
           <a class="list-group-item" href="{{pathFor 'helpers'}}">Helpers</a>
           <a class="list-group-item" href="{{pathFor 'events'}}">Events</a>
           <a class="list-group-item" href="{{pathFor 'applicationStructure'}}">Application structure</a>
