--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Glorify Meteor!</title>
+  <title>Practical Meteor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -36,11 +36,11 @@
         </div>
       </div>
       <div class="col-sm-8">
-        <h1>Welcome to Glorify Meteor!</h1>
+        <h1>Welcome to Practical Meteor!</h1>
         <p>
           <span class="glyphicon glyphicon-book"></span>
           You will learn something (special) about
-          <a href="http://meteor.com">Meteor</a> (v0.9.3) and his glory here.
+          <a href="http://meteor.com">Meteor</a> (v0.9.4) with practical live examples.
         </p>
         {{> yield}}
       </div>
