Removed Meteor version from text in header

--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -40,7 +40,7 @@
         <p>
           <span class="glyphicon glyphicon-book"></span>
           You will learn something (special) about
-          <a href="http://meteor.com">Meteor</a> (v0.9.4) with practical live examples.
+          <a href="http://meteor.com">Meteor</a> with practical live examples.
         </p>
         {{> yield}}
       </div>
