--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -1,6 +1,7 @@
 <head>
   <title>Practical Meteor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn Meteor with practical examples, not just text.">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
