Added link for "Meteor files order" repository in app structure section

--- a/client/applicationStructure/applicationStructure.html
+++ b/client/applicationStructure/applicationStructure.html
@@ -8,6 +8,10 @@
     without worying you something break.
   </p>
 
+  <p>To understand ordering of files check out
+    <a href="https://github.com/Elfoslav/meteor-files-order">"Meteor files order"</a> repository.
+  </p>
+
   <p>Structure of your application depends on size of your application.</p>
   <p>You can Google
     <a href="https://www.google.sk/search?q=meteor+app+structure&oq=meteor+app+structure&aqs=chrome..69i57j69i60.3113j0j7&sourceid=chrome&es_sm=93&ie=UTF-8" target="_blank">
