Updated helpers section

--- a/client/helpers/helpers.html
+++ b/client/helpers/helpers.html
@@ -26,7 +26,7 @@ Template.yourTemplateName.helpers({
     See how it will look with array of objects:
   </p>
 <pre>
-Template.helpers.helpers({
+Template.yourTemplateName.helpers({
   books: function() {
     return [
       { title: 'Discover Meteor', pages: 300 },
@@ -50,7 +50,7 @@ Template.helpers.helpers({
   <h2>Helpers with parameters</h2>
   <p>Add helper called <i>add</i> with parameters:</p>
 <pre>
-Template.helpers.helpers({
+Template.yourTemplateName.helpers({
   books: function() {
     return [
       { title: 'Discover Meteor', pages: 300 },
