Added methods lesson

--- a/client/autopublishAndInsecure/autopublishAndInsecure.html
+++ b/client/autopublishAndInsecure/autopublishAndInsecure.html
@@ -40,6 +40,11 @@ $ meteor remove autopublish
 $ meteor remove insecure
 </pre>
 
+  <p>
+    If you remove your insecure package, you have to move your inserts and updates to server
+    <a href="{{pathFor 'methods'}}">methods</a>.
+  </p>
+
   <p>Read more about <a href="{{pathFor 'publishSubscribe'}}">publishing and subscribing your data</a>.</p>
 
   <br/><br/>
