--- a/glorify-meteor.html
+++ b/glorify-meteor.html
@@ -33,6 +33,7 @@
           <a class="list-group-item" href="{{pathFor 'autopublishAndInsecure'}}">Autopublish and Insecure packages</a>
           <a class="list-group-item" href="{{pathFor 'publishSubscribe'}}">Publish & Subscribe</a>
           <a class="list-group-item" href="{{pathFor 'reactivity'}}">Reactivity - realtime changes</a>
+          <a class="list-group-item" href="{{pathFor 'methods'}}">Methods</a>
           <a class="list-group-item" href="{{pathFor 'superEasyDeploy'}}">Super easy deploy</a>
         </div>
       </div>
